--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,14 @@ body {
 #header-title {
   display: block;
   text-align: center;
-  font-size: 20px;
+  font-size: 36px;
   font-weight: bold;
 }
 #header-nav {
   display: block;
   float: right;
   margin-top: 0;
+  padding-right: 18px;
 }
 #header-nav li {
   display: inline;
@@ -82,8 +83,8 @@ h1, h2, h3, h4 {
 }
 p {
   line-height: 1.5;
-  color: #1abc9c;
+  color: #000;
 }
 .about {
-  text-align: center
+  text-align: justify;
 }
